lab_4/k8s/logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logs-ingress
  namespace: kube-logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kibana.localdomain
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
